[gd_scene load_steps=6 format=3 uid="uid://d4ha1xuejykv4"]

[ext_resource type="Script" uid="uid://doyte1gcyxv2q" path="res://overlay_screens/title_screen.gd" id="1_1k1o7"]
[ext_resource type="Texture2D" uid="uid://b8kc5awqkycvf" path="res://overlay_screens/animations/title_bg.png" id="2_sa8iw"]
[ext_resource type="SpriteFrames" uid="uid://c1ixp61icsh68" path="res://player/sprite/deer_frames.tres" id="3_yl8uf"]
[ext_resource type="SpriteFrames" uid="uid://dfb2oc5l51b4x" path="res://vehicle/animations/car_hatch_gray.tres" id="4_6wvlq"]

[sub_resource type="LabelSettings" id="LabelSettings_iq8hk"]
font_size = 32

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_1k1o7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 768.0
offset_bottom = 768.0
color = Color(0, 0, 0, 1)

[node name="TitleLabel" type="Label" parent="."]
offset_left = 192.0
offset_top = 128.0
offset_right = 576.0
offset_bottom = 192.0
text = "Deer in the Headlights"
label_settings = SubResource("LabelSettings_iq8hk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 320.0
offset_top = 320.0
offset_right = 448.0
offset_bottom = 368.0
text = "Start Game"

[node name="Mode_Button" type="CheckButton" parent="."]
offset_left = 312.0
offset_top = 256.0
offset_right = 459.0
offset_bottom = 304.0
button_pressed = true
text = "Night Mode"

[node name="InstructionsButton" type="Button" parent="."]
offset_left = 320.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 432.0
text = "How To Play"

[node name="CreditsButton" type="Button" parent="."]
offset_left = 320.0
offset_top = 448.0
offset_right = 448.0
offset_bottom = 496.0
text = "Credits"

[node name="SubTitleLabel" type="Label" parent="."]
offset_left = 192.0
offset_top = 192.0
offset_right = 576.0
offset_bottom = 256.0
text = "A short game about a deer trying to escape its fate"
vertical_alignment = 1

[node name="InstructionsPopup" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Instructions"
initial_position = 1
size = Vector2i(400, 314)
dialog_text = "Guide the deer across the highway while avoiding traffic.  Be wary of the hunter. He's a very poor shot, but will eventually get you.

Move using WASD or the arrow keys.

Don't get hit!

Escape within 20 seconds to avoid the hunter's bullet!"
dialog_autowrap = true

[node name="CreditsPopup" type="AcceptDialog" parent="."]
oversampling_override = 1.0
title = "Credits"
initial_position = 1
size = Vector2i(500, 340)
dialog_text = "Godot Engine Â© Juan Linietsky, Ariel Manzur, Godot contributors.

Deer sprite/animations adapted from AntumDeluge's rework of CalciumTrice's deer sprite under CC-BY 3.0
https://opengameart.org/node/107096

Pine tree sprite by isaiah658 released under CC0
https://opengameart.org/content/pine-tree-16x16

Gunshot sound from Mike Koenig (Soundbible) - retrieved from OpenGameArt under CC-BY 3.0
https://opengameart.org/content/shotgun-shoot-reload

All gameplay code and other art by Pedro Teixeira"
dialog_autowrap = true

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(768, 0)
autoscroll = Vector2(100, 0)

[node name="TitleBg" type="Sprite2D" parent="Parallax2D"]
position = Vector2(384, 640)
texture = ExtResource("2_sa8iw")

[node name="TitleDeer" type="AnimatedSprite2D" parent="."]
position = Vector2(448, 664)
sprite_frames = ExtResource("3_yl8uf")
animation = &"RUN_EAST"
autoplay = "RUN_EAST"
frame_progress = 0.74413073

[node name="TitleCar" type="AnimatedSprite2D" parent="."]
position = Vector2(320, 664)
sprite_frames = ExtResource("4_6wvlq")
animation = &"L_rain"
autoplay = "L_driving_wipers"
flip_h = true

[connection signal="toggled" from="Mode_Button" to="." method="_on_mode_button_toggled"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
